--- a/college-budget-planner.html
+++ b/college-budget-planner.html
@@ -12,7 +12,7 @@
         <h1>College Budget Planner</h1>
       </header>
       <div class="planner">
-        <div class="row income">
+        <div class="row" id="periodLabels">
           <div class="label">Income</div>
           <div class="label">Monthly</div>
           <div class="label">Quarter/Semester</div>
@@ -20,33 +20,81 @@
         </div>
         <div class="row income">
           <div class="label">Work</div>
-          <input class="month" placeholder="Work monthly" />
-          <input class="term" placeholder="work term" />
-          <input class="year" placeholder="work year" />
+          <input class="monthlyIncome" />
+          <input class="termIncome" />
+          <input class="yearIncome" />
         </div>
         <div class="row income">
           <div class="label">Scholarships/Grants</div>
-          <input class="month" placeholder="schol mont" />
-          <input class="term" placeholder="scol term $" />
-          <input class="year" placeholder="scol year $" />
+          <input class="monthlyIncome" />
+          <input class="termIncome" />
+          <input class="yearIncome" />
         </div>
         <div class="row income">
           <div class="label">Financial Aid</div>
-          <input class="month" placeholder="fin month $" />
-          <input class="term" placeholder="fin term $" />
-          <input class="year" placeholder="fin year $" />
+          <input class="monthlyIncome" />
+          <input class="termIncome" />
+          <input class="yearIncome" />
         </div>
         <div class="row income">
           <div class="label">Other</div>
-          <input class="month" placeholder="other month $" />
-          <input class="term" placeholder="other term $" />
-          <input class="year" placeholder="other year $" />
+          <input class="monthlyIncome" />
+          <input class="termIncome" />
+          <input class="yearIncome" />
         </div>
         <div class="row incomeTotal">
           <div class="label">Total:</div>
-          <div class="month total"></div>
-          <div class="term total"></div>
-          <div class="year total"></div>
+          <div id="monthIncomeTotal"></div>
+          <div id="termIncomeTotal"></div>
+          <div id="yearIncomeTotal"></div>
+        </div>
+        <div class="row" id="periodLabels">
+          <div class="label">Expenses (fixed)</div>
+          <div class="label">Monthly</div>
+          <div class="label">Quarter/Semester</div>
+          <div class="label">Yearly</div>
+        </div>
+        <div class="row fixedExpenses">
+          <div class="label">Rent/Room + Board</div>
+          <input class="monthFE" />
+          <input class="termFE" />
+          <input class="yearFE" />
+        </div>
+        <div class="row fixedExpenses">
+          <div class="label">Auto expenses</div>
+          <input class="monthFE" />
+          <input class="termFE" />
+          <input class="yearFE" />
+        </div>
+        <div class="row fixedExpenses">
+          <div class="label">Tuition/fees</div>
+          <input class="monthFE" />
+          <input class="termFE" />
+          <input class="yearFE" />
+        </div>
+        <div class="row fixedExpenses">
+          <div class="label">Loans</div>
+          <input class="monthFE" />
+          <input class="termFE" />
+          <input class="yearFE" />
+        </div>
+        <div class="row fixedExpenses">
+          <div class="label">Insurance</div>
+          <input class="monthFE" />
+          <input class="termFE" />
+          <input class="yearFE" />
+        </div>
+        <div class="row fixedExpenses">
+          <div class="label">Other</div>
+          <input class="monthFE" />
+          <input class="termFE" />
+          <input class="yearFE" />
+        </div>
+        <div class="row incomeTotal">
+          <div class="label">Total:</div>
+          <div id="monthFETotal"></div>
+          <div id="termFETotal"></div>
+          <div id="yearFETotal"></div>
         </div>
       </div>
     </main>
