--- a/college-budget-planner.html
+++ b/college-budget-planner.html
@@ -10,6 +10,7 @@
     <main>
       <header>
         <h1>College Budget Planner</h1>
+        <p>How do I work?</p>
       </header>
       <div class="planner">
         <div class="row" id="periodLabels">
