--- a/college-budget-planner.html
+++ b/college-budget-planner.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>College Budget Planner</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/5afdfdec85.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main>
       <header>
         <h1>College Budget Planner</h1>
-        <p>How do I work?</p>
+        <p id="openAbout">How do I work?</p>
+
+        <div id="about" class="hidden">
+          <i class="far fa-times-circle"></i>
+        </div>
       </header>
       <div class="planner">
         <div class="row" id="periodLabels">
@@ -176,5 +184,6 @@
       </div>
     </main>
     <script src="budget-planner.js"></script>
+    <script src="about.js"></script>
   </body>
 </html>
