More changes idk

--- a/college-budget-planner.html
+++ b/college-budget-planner.html
@@ -17,7 +17,7 @@
         <p id="openAbout">How do I work?</p>
 
         <div id="about" class="hidden">
-          <i class="far fa-times-circle"></i>
+          <i class="far fa-times-circle fa-2x"></i>
         </div>
       </header>
       <div class="planner">
@@ -181,6 +181,14 @@
           <div id="termVETotal"></div>
           <div id="yearVETotal"></div>
         </div>
+      </div>
+
+      <div id="totalDisplay">
+        <p>Total income:</p>
+        <p></p>
+        <p>- Total expenses:</p>
+        <p></p>
+        <hr />
       </div>
     </main>
     <script src="budget-planner.js"></script>
