--- a/college-budget-planner.html
+++ b/college-budget-planner.html
@@ -14,6 +14,10 @@
     <main>
       <header>
         <h1>College Budget Planner</h1>
+        <h2>
+          Starting higher education sometimes means the start of financial
+          management. Use this tool to help!
+        </h2>
         <p id="openAbout">How do I work?</p>
 
         <div id="about" class="hidden">
@@ -182,14 +186,46 @@
           <div id="yearVETotal"></div>
         </div>
       </div>
-
+      <form>
+        <label for="month"
+          ><input
+            class="pickCalc"
+            type="radio"
+            id="calcMonth"
+            name="calcChoice"
+            checked
+          />
+          Month
+        </label>
+        <label for="term"
+          ><input
+            class="pickCalc"
+            type="radio"
+            id="calcMonth"
+            name="calcChoice"
+          />
+          Term
+        </label>
+        <label for="year"
+          ><input
+            class="pickCalc"
+            type="radio"
+            id="calcMonth"
+            name="calcChoice"
+          />
+          Year
+        </label>
+      </form>
       <div id="totalDisplay">
-        <p>Total income:</p>
-        <p></p>
-        <p>- Total expenses:</p>
-        <p></p>
+        <div>Total income:</div>
+        <div id="totalIncome">1000</div>
+        <div>- Total expenses:</div>
+        <div id="totalExpenses">100</div>
         <hr />
+        <div>Balance:</div>
+        <div id="balance">900</div>
       </div>
+      <button>Visualize!</button>
     </main>
     <script src="budget-planner.js"></script>
     <script src="about.js"></script>
