--- a/college-budget-planner.html
+++ b/college-budget-planner.html
@@ -20,7 +20,6 @@
           Starting higher education sometimes means the start of financial
           management. Use this tool to help!
         </h2>
-        <p id="openAbout">How do I work?</p>
       </header>
       <div class="planner">
         <div class="row">
@@ -184,7 +183,7 @@
           <div id="yearVETotal"></div>
         </div>
       </div>
-      <!--total balance flip card flip card -->
+      <!--total balance flip card -->
       <div id="flipCardContainer">
         <div id="flipCard">
           <div class="front face">
@@ -220,6 +219,9 @@
               </label>
             </form>
             <button id="calcBalanceBtn">Calculate balance!</button>
+            <div id="calcError" class="hide">
+              Error: need data to calculate!
+            </div>
           </div>
           <div class="back face">
             <div id="totalDisplay">
@@ -235,56 +237,11 @@
               <div id="balance"></div>
             </div>
             <button id="recalcButton">Recalculate</button>
-            <button id="visualizeBtn">Visualize!</button>
-            <div id="visError" class="hide">
-              Error: need data to visualize!
-            </div>
           </div>
         </div>
       </div>
       <canvas id="chartContainer" class="hide"></canvas>
     </main>
     <script src="budget-planner.js"></script>
-    <!-- Chart.js visualization -->
-    <script>
-      //get visualize button
-      let visButton = document.getElementById('visualizeBtn');
-      //get error message
-      let visError = document.getElementById('visError');
-      visButton.onclick = visualize;
-      function visualize() {
-        let chartContainer = document.getElementById('chartContainer');
-        let totalIncome = document.getElementById('totalIncome').innerText;
-        let totalExpenses = document.getElementById('totalExpenses').innerText;
-        if (totalIncome == '$0' || totalExpenses == '$0') {
-          //show error message
-          visError.classList.remove('hide');
-          return;
-        }
-        //show chartContainer
-        chartContainer.classList.remove('hide');
-        let chart = new CanvasJS.Chart(chartContainer, {
-          animationEnabled: true,
-          title: {
-            text: 'Fixed Expenses',
-          },
-          data: [
-            {
-              // Change type to "doughnut", "line", "splineArea", etc.
-              type: 'pie',
-              dataPoints: [
-                {label: 'Rent/Room + Board', y: 200},
-                {label: 'Auto expenses', y: 100},
-                {label: 'Tuition/fees', y: 100},
-                {label: 'Loans', y: 100},
-                {label: 'Insurance', y: 100},
-                {label: 'Other', y: 100},
-              ],
-            },
-          ],
-        });
-        chart.render();
-      }
-    </script>
   </body>
 </html>
